# OpenVDBForUnity

./: .gitignore  README.md  README_ja.md  THIRD_PARTY_LICENSES.md
OpenVDBForUnity/Assets/: Default.mat
OpenVDBForUnity/Assets/Editor/PackageBuild/: LibraryDownloader.cs  jp.kazuki.OpenVDB.PackageBuild.asmdef
OpenVDBForUnity/Assets/HDRPDefaultResources/: DefaultSettingsVolumeProfile.asset  HDRenderPipelineAsset.asset  HDRenderPipelineGlobalSettings.asset
OpenVDBForUnity/Assets/OpenVDB.Tests/: OpenVDBAPITest.cs  OpenVDBImporterTest.cs  jp.kazuki.OpenVDB.Tests.asmdef
OpenVDBForUnity/Assets/OpenVDB/Editor/: OpenVDBVolumeEditor.cs  jp.kazuki.OpenVDB.Editor.asmdef
OpenVDBForUnity/Assets/OpenVDB/Editor/HDRP/: VolumeHDRPShaderGUI.cs
OpenVDBForUnity/Assets/OpenVDB/Scripts/: OpenVDBVolume.cs  jp.kazuki.OpenVDB.asmdef
OpenVDBForUnity/Assets/OpenVDB/Shaders/: VolumeShadowCaster.cginc  VolumeStandard.cginc  VolumeStandard.shader
OpenVDBForUnity/Assets/Scenes/: Test.unity
OpenVDBForUnity/Assets/Sequences/: PlayableTimeline.playable
OpenVDBForUnity/Assets/VDB/: Clouds.mat  bunny_cloud.mat  explosion.mat
OpenVDBForUnity/Assets/VDB/explosion.vdb-1.0.0/: explosion.mat
OpenVDBForUnity/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset
Plugin/: CMakeLists.txt
Plugin/openvdbi/: CMakeLists.txt  pch.h
Plugin/openvdbi/Foundation/: Allocator.cpp
Plugin/openvdbi/Importer/: OpenVDBImporter.h  oiContext.cpp  oiContext.h  oiVolume.cpp  oiVolume.h
docs/: REALTIME_VOLUMETRIC_RENDERING_RESEARCH.md
(+40 files in other folders)
