file(GLOB sources *.cpp *.h Importer/*.h Importer/*.cpp Foundation/*.h Foundation/*.cpp)

if(BUILD_SHARED_LIBS)
    set(ENABLE_DEPLOY OFF)
    add_plugin(openvdbi SOURCES ${sources})
else()
    add_library(openvdbi STATIC ${sources})
    install(TARGETS openvdbi DESTINATION lib)
endif()

target_include_directories(openvdbi PUBLIC .)
target_link_libraries(openvdbi PUBLIC OpenVDB::openvdb TBB::tbb)
if(TARGET Imath::Imath)
    target_link_libraries(openvdbi PUBLIC Imath::Imath)
endif()
